Getting closer to having a linux build working. Still some issues with hsql db creation.