@@ -5,7 +5,7 @@
 #############################################
 
 # Where your JDK lives (1.8 please, 1.7 has performance issues with swing)
-export JAVA_HOME=/home/dan/Development/Jdks/jdk1.8.0_25
+export JAVA_HOME=/home/dan/Development/Jdks/jdk1.8.0_45
 
 # Whether to use the java platform look and feel
 # Values: yes or no
@@ -30,20 +30,40 @@ export PLUGIN_JAR=no
 
 export CD_DIR=`pwd`
 
-export CD_NATIVE_LIB_PATH=$CD_DIR/nativelib
+export CD_NATIVE_LIB_PATH=$CD_DIR/natives
 
 export LD_LIBRARY_PATH=$CD_NATIVE_LIB_PATH:$LD_LIBRARY_PATH
 
+export AA_OPTIONS="-Dawt.useSystemAAFontSettings=on -Dswing.aatext=true"
+
+#export GL_OPTIONS="-Dsun.java2d.opengl=True"
+
+#export VM_MEM_OPTS="-Xms256m -Xmx512m"
+#export VM_MEM_OPTS="-Xms512m -Xmx512m"
 #export VM_MEM_OPTS="-Xms512m -Xmx1024m"
-export VM_GC_OPTS="-XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=80 -XX:MaxGCPauseMillis=10"
+
+#export VM_GC_OPTS="-Xincgc"
+#export VM_GC_OPTS="-XX:+UseG1GC"
+#export VM_GC_OPTS="-XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=80 -XX:MaxGCPauseMillis=10"
+export VM_GC_OPTS="-XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=50 -XX:MaxGCPauseMillis=10"
+#export VM_GC_OPTS="-XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=10 -XX:MaxGCPauseMillis=5"
+#export VM_GC_OPTS="-XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:CMSInitiatingOccupancyFraction=80"
 #export VM_GC_DEBUG="-XX:+PrintGC"
+#export VM_GC_DEBUG="-XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:gclogfile.gc"
+
+export VM_PROPS="-Dorg.jboss.logging.provider=slf4j"
 
 # Comment this out if you want to use visualvm etc
-#export VM_DISABLE_PERF_DATA="-XX:-UsePerfData"
+export VM_DISABLE_PERF_DATA="-XX:-UsePerfData"
 
-export CLASSPATH=$CD_DIR/cd.jar:$CD_DIR/cd_lib:$CLASSPATH
+export CD_JAR=component-designer-0.0.3.jar
+export SL_DIR=supportlibs
 
-export CD_SWITCHES=
+export CLASSPATH=$(echo supportlibs/*.jar |tr ' ' ':')
+export CLASSPATH=component-designer-0.0.3.jar:$CLASSPATH
+
+export CD_SWITCHES=""
+
 if [ "$USE_NATIVE_LAF"q == "yesq" ]; then
     export CD_SWITCHES="$CD_SWITCHES --useSlaf"
 fi
@@ -53,11 +73,11 @@ if [ "$DEVELOPMENT_COMPONENTS"q != "q" ]; then
 fi
 
 if [ "$PLUGIN_JAR"q == "yesq" ]; then
-    export CLASSPATH=$CD_DIR/cdplugin.jar:$CLASSPATH
+    export CLASSPATH=$CLASSPATH:cdplugin.jar
     export CD_SWITCHES="$CD_SWITCHES --pluginJar"
 fi
 
-export JAVA_CL_ARGS="-cp $CLASSPATH $VM_MEM_OPTS $VM_GC_OPTS $VM_GC_DEBUG $VM_DISABLE_PERF_DATA uk.co.modularaudio.componentdesigner.ComponentDesigner $CD_SWITCHES"
+export JAVA_CL_ARGS="$AA_OPTIONS $GL_OPTIONS $VM_PROPS $VM_MEM_OPTS $VM_GC_OPTS $VM_GC_DEBUG $VM_DISABLE_PERF_DATA uk.co.modularaudio.componentdesigner.ComponentDesigner $CD_SWITCHES"
 
 echo "Running $JAVA_HOME/bin/java $JAVA_CL_ARGS"
 $JAVA_HOME/bin/java $JAVA_CL_ARGS
